--- a/modules/.releng/apps/data-engine/data-engine-rest-impl/artifact.properties
+++ b/modules/.releng/apps/data-engine/data-engine-rest-impl/artifact.properties
@@ -1,4 +1,5 @@
-artifact.git.id=a460d7323466fe5ac4f1f259c98a92e148dd9bf0
-artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.33/com.liferay.data.engine.rest.impl-1.0.33-sources-commercial.jar
-artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.33/com.liferay.data.engine.rest.impl-1.0.33-sources.jar
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.33/com.liferay.data.engine.rest.impl-1.0.33.jar
+artifact.git.id=007326888a0d34b9e427f6c513e64d76d2cfbc17
+artifact.jsdoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.34/com.liferay.data.engine.rest.impl-1.0.34-jsdoc.jar
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.34/com.liferay.data.engine.rest.impl-1.0.34-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.34/com.liferay.data.engine.rest.impl-1.0.34-sources.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.data.engine.rest.impl/1.0.34/com.liferay.data.engine.rest.impl-1.0.34.jar
