artifact:ignore flags-taglib 4.1.0 artifact properties

--- a/modules/.releng/apps/flags/flags-taglib/artifact.properties
+++ b/modules/.releng/apps/flags/flags-taglib/artifact.properties
@@ -1,7 +1,8 @@
-artifact.git.id=155f36988293157fd4924c7924a6f2adf9dbee26
-artifact.javadoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.0.16/com.liferay.flags.taglib-4.0.16-javadoc.jar
-artifact.jsdoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.0.16/com.liferay.flags.taglib-4.0.16-jsdoc.jar
-artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.0.16/com.liferay.flags.taglib-4.0.16-sources-commercial.jar
-artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.0.16/com.liferay.flags.taglib-4.0.16-sources.jar
-artifact.taglibdoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.0.16/com.liferay.flags.taglib-4.0.16-taglibdoc.jar
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.0.16/com.liferay.flags.taglib-4.0.16.jar
+artifact.git.id=19d26cb481689031f97f1444a0317f4dd9d665f2
+artifact.javadoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0-javadoc.jar
+artifact.jsdoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0-jsdoc.jar
+artifact.jspc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0-jspc.jar
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0-sources.jar
+artifact.taglibdoc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0-taglibdoc.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.flags.taglib/4.1.0/com.liferay.flags.taglib-4.1.0.jar
