--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Simulate Segments Entries
 anonymous-user-segments-cache-expiration-time-description=Define the time, in seconds, in which the anonymous segment cache is cleared.
 anonymous-user-segments-cache-expiration-time-name=Anonymous User Segments Cache Expiration Time
 bounce-rate=Bounce Rate
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud.
 click=Click
 conditions=Conditions
 conditions-match=Conditions Match
