--- a/modules/apps/message-boards/message-boards-service/build.gradle
+++ b/modules/apps/message-boards/message-boards-service/build.gradle
@@ -37,5 +37,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.metatype", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
-	compileOnly project(":apps:message-boards:message-boards-api")
+	compileOnly group: "com.liferay", name: "com.liferay.message.boards.api", version: "5.2.0"
 }
