--- a/modules/apps/portal-search/portal-search-admin-web/build.gradle
+++ b/modules/apps/portal-search/portal-search-admin-web/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	compileOnly group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
-	compileOnly project(":apps:portal-search:portal-search-web-api")
+	compileOnly group: "com.liferay", name: "com.liferay.portal.search.web.api", version: "3.1.0"
 
 	jsCompile project(":apps:frontend-js:frontend-js-loader-modules-extender-api")
 	jsCompile project(":apps:frontend-js:frontend-js-web")
