--- a/build.properties
+++ b/build.properties
@@ -439,6 +439,19 @@
 ##
 
     #
+    # Set the environment variable NODE_ENV when invoking the Node.js package
+    # manager via Gradle in a Jenkins environment.
+    #
+    nodejs.ci.node.env=
+
+    #
+    # Set the environment variable NODE_ENV when invoking the Node.js package
+    # manager via Gradle.
+    #
+    nodejs.node.env=dev
+    #nodejs.node.env=production
+
+    #
     # Set additional arguments to pass to NPM when invoked via Gradle.
     #
     nodejs.npm.args=
