--- a/build.properties
+++ b/build.properties
@@ -447,7 +447,7 @@
     # Set the environment variable NODE_ENV when invoking the Node.js package
     # manager via Gradle in a Jenkins environment.
     #
-    nodejs.ci.node.env=
+    nodejs.ci.node.env=production
 
     #
     # Set the environment variable NODE_ENV when invoking the Node.js package
