--- a/modules/apps/calendar/calendar-test/build.gradle
+++ b/modules/apps/calendar/calendar-test/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 	testIntegrationCompile group: "javax.servlet", name: "javax.servlet-api", version: "3.1.0"
 	testIntegrationCompile group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	testIntegrationCompile project(":apps:calendar:calendar-api")
+	testIntegrationCompile project(":apps:calendar:calendar-test-util")
 	testIntegrationCompile project(":apps:export-import:export-import-test-util")
 	testIntegrationCompile project(":apps:portal-search:portal-search-test-util")
 	testIntegrationCompile project(":apps:portal:portal-upgrade-api")
