LPS-99740 Set default build nodejs.node.env to production
Two changes on top of:

https://github.com/brianchandotcom/liferay-portal/pull/76953

1. Fully spell out "development" instead of "dev", to match conventional
   practice in the Node community.
2. Flip the default to "production".

We flip the default for a few reasons:

- To match behavior before this property was added (in the absence of an
  explicit environment, we effectively always built in "production" mode).
- For consistency with our runtime properties, which all have
  "production-like" defaults (eg. minification on, JS logging
  suppressed, caching on etc).
- For consistency with the default behavior you would get if you run our
  build scripts directly with `yarn` and not Gradle/Ant.
- To make the default safer: accidentally making a development build
  could have severe consequences (for example, React development builds
  are massively slower at runtime than production builds); accidentally
  making a production build, on the other hand, just means that the
  debugging experience will be like it always has been in the past.

--- a/build.properties
+++ b/build.properties
@@ -453,8 +453,8 @@
     # Set the environment variable NODE_ENV when invoking the Node.js package
     # manager via Gradle.
     #
-    nodejs.node.env=dev
-    #nodejs.node.env=production
+    nodejs.node.env=production
+    #nodejs.node.env=development
 
     #
     # Set additional arguments to pass to NPM when invoked via Gradle.
