COMMERCE-1675 - talend-definition - Update properties files

--- a/modules/etl/talend/talend-definition/src/main/resources/com/liferay/talend/resource/LiferayInputResourceProperties.properties
+++ b/modules/etl/talend/talend-definition/src/main/resources/com/liferay/talend/resource/LiferayInputResourceProperties.properties
@@ -5,4 +5,6 @@ form.Reference.displayName=Reference
 form.Reference.title=Reference
 
 property.endpoint.displayName=Endpoint
+property.includeFields.displayName=Include Fields
+property.includeFieldsParameters.displayName=Include Fields Parameters
 property.operations.displayName=Operation
