--- a/modules/apps/frontend-js/frontend-js-metal-web/package.json
+++ b/modules/apps/frontend-js/frontend-js-metal-web/package.json
@@ -21,7 +21,7 @@
 		"metal-path-parser": "1.0.4",
 		"metal-position": "2.1.2",
 		"metal-promise": "3.0.5",
-		"metal-router": "4.0.0-milestone.1",
+		"metal-router": "3.6.3",
 		"metal-scrollspy": "2.1.1",
 		"metal-soy": "2.16.8",
 		"metal-soy-bundle": "2.16.8",
