LRQA-50534 Unquarantine from search suites

--- a/test.properties
+++ b/test.properties
@@ -1945,7 +1945,7 @@
         **/bookmarks-test/**/BookmarksEntryTrashHandlerTest.java,\
         **/bookmarks-test/**/BookmarksFolderServiceTest.java,\
         **/bookmarks-test/**/BookmarksFolderTrashHandlerTest.java,\
-        # **/document-library-test/**/DLFileEntryTrashHandlerTest.java,\
+        **/document-library-test/**/DLFileEntryTrashHandlerTest.java,\
         **/document-library-test/**/DLFolderTrashHandlerTest.java,\
         **/journal-test/**/JournalArticleAssetSearchTest.java,\
         **/journal-test/**/JournalArticleExpirationTest.java,\
@@ -1959,7 +1959,7 @@
         **/portlet-title-localization-test/**/PortletTitleTest.java,\
         **/src/test/**/search/**Test.java,\
         **/portal-search*/**/src/testIntegration/**/*Test.java,\
-        # **/portal-workflow-kaleo-test/**/WorkflowTaskManagerImplTest.java,\
+        **/portal-workflow-kaleo-test/**/WorkflowTaskManagerImplTest.java,\
         **/portal-workflow-metrics-service/**/WorkflowMetricsSLAProcessorTest.java,\
         **/segments/**/odata/retriever/**/*Test.java,\
         **/segments/**/SegmentsEntryProviderTest.java,\
