LRQA-51412 Reorganize Change List tests

--- a/test.properties
+++ b/test.properties
@@ -227,7 +227,7 @@
         portal-breadcrumb,\
         portal-calendar,\
         portal-categories,\
-        portal-change-tracking,\
+        portal-change-list,\
         portal-clusterting,\
         portal-collaboration,\
         portal-commerce,\
@@ -1543,15 +1543,15 @@
     test.batch.names[bundle]=
 
     #
-    # Change Tracking
+    # Change List
     #
 
-    test.batch.class.names.includes[change-tracking]=\
+    test.batch.class.names.includes[change-list]=\
         **/change/tracking/**/*Test.java
 
-    test.batch.dist.app.servers[change-tracking]=tomcat
+    test.batch.dist.app.servers[change-list]=tomcat
 
-    test.batch.names[change-tracking]=\
+    test.batch.names[change-list]=\
         central-requirements-jdk8,\
         functional-tomcat90-mysql57-jdk8,\
         js-unit-jdk8,\
@@ -1560,8 +1560,8 @@
         modules-unit-jdk8,\
         semantic-versioning-jdk8
 
-     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][change-tracking]=\
-         (testray.main.component.name ~ "Change Lists")
+     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][change-list]=\
+         (testray.main.component.name ~ "Change List")
 
     #
     # Clustering
@@ -2398,6 +2398,7 @@
         ${testray.team.app-builder.component.names},\
         ${testray.team.forms-and-workflow.component.names},\
         ${testray.team.frontend-infrastructure.component.names},\
+        ${testray.team.change-list.component.names},\
         ${testray.team.collaboration.component.names},\
         ${testray.team.commerce.component.names},\
         ${testray.team.core-infrastructure.component.names},\
@@ -2462,6 +2463,9 @@
     testray.team.app-builder.component.names=\
         App Builder
 
+    testray.team.change-list.component.names=\
+        Change List
+
     testray.team.collaboration.component.names=\
         Adaptive Media,\
         Akismet,\
@@ -2497,7 +2501,6 @@
         APIs,\
         Application Standards,\
         Auditing,\
-        Change Lists,\
         Clustering,\
         Databases,\
         Deployment,\
