build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -141,8 +141,8 @@ com.liferay.blogs.item.selector.web=5.0.0
 com.liferay.blogs.layout.prototype=5.0.0
 com.liferay.blogs.reading.time=3.0.0
 com.liferay.blogs.recent.bloggers.api=4.0.0
-com.liferay.blogs.recent.bloggers.test=1.0.0
 com.liferay.blogs.recent.bloggers.web=5.0.0
+com.liferay.blogs.recent.bloggers.web.test=1.0.0
 com.liferay.blogs.service=4.0.0
 com.liferay.blogs.test=1.0.0
 com.liferay.blogs.test.util=4.0.0
@@ -218,6 +218,7 @@ com.liferay.contacts.test=1.0.0
 com.liferay.contacts.uad=5.0.0
 com.liferay.contacts.uad.test=1.0.0
 com.liferay.contacts.web=4.0.0
+com.liferay.counter.test=1.0.0
 com.liferay.css.builder=3.0.1
 com.liferay.currency.converter.api=3.0.0
 com.liferay.currency.converter.web=4.0.0
