--- a/build.xml
+++ b/build.xml
@@ -1467,15 +1467,19 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 	</target>
 
 	<target name="update-binaries-cache">
+		<condition else="true" property="symbolic" value="false">
+			<os family="windows" />
+		</condition>
+
 		<sync-dir
 			dir="${project.dir}/.gradle/caches/modules-2/files-2.1"
-			symbolic="false"
+			symbolic="${symbolic}"
 			toDir="${build.binaries.cache.dir}/.gradle/caches/modules-2/files-2.1"
 		/>
 
 		<sync-dir
 			dir="${project.dir}/modules/node_modules_cache"
-			symbolic="false"
+			symbolic="${symbolic}"
 			toDir="${build.binaries.cache.dir}/.yarn/offline-cache"
 		/>
 	</target>
