--- a/build.xml
+++ b/build.xml
@@ -1409,11 +1409,9 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 	</target>
 
 	<target name="update-binaries-cache">
-		<sync-dir
-			dir="${project.dir}/.gradle/caches/modules-2/files-2.1"
-			symbolic="false"
-			toDir="${build.binaries.cache.dir}/.gradle/caches/modules-2/files-2.1"
-		/>
+		<copy overwrite="false" todir="${build.binaries.cache.dir}/.gradle/caches/modules-2/files-2.1">
+			<fileset dir="${project.dir}/.gradle/caches/modules-2/files-2.1" />
+		</copy>
 	</target>
 
 	<target name="update-gradle-cache">
