--- a/modules/apps/data-engine/data-engine-api/build.gradle
+++ b/modules/apps/data-engine/data-engine-api/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:data-engine:data-engine-spi")
+	compileOnly project(":core:petra:petra-function")
 }
