--- a/modules/apps/data-engine/data-engine-api/build.gradle
+++ b/modules/apps/data-engine/data-engine-api/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.data.engine.spi", version: "3.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.function", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "3.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.18.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
