--- a/modules/apps/data-engine/data-engine-api/build.gradle
+++ b/modules/apps/data-engine/data-engine-api/build.gradle
@@ -6,5 +6,5 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.1.0"
 	compileOnly group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
-	compileOnly project(":apps:data-engine:data-engine-spi")
+	compileOnly group: "com.liferay", name: "com.liferay.data.engine.spi", version: "3.1.0"
 }
