--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -177,6 +177,7 @@ com.liferay.comment.sanitizer=4.0.2
 com.liferay.comment.taglib=2.0.13
 com.liferay.comment.test=1.0.0
 com.liferay.comment.web=4.0.10
+com.liferay.comment.web.test=1.0.0
 com.liferay.company.test=1.0.0
 com.liferay.configuration.admin.api=2.1.4
 com.liferay.configuration.admin.test=1.0.0
@@ -192,14 +193,14 @@ com.liferay.contacts.web=3.0.14
 com.liferay.counter.test=1.0.0
 com.liferay.currency.converter.api=2.0.2
 com.liferay.currency.converter.web=3.0.10
-com.liferay.data.engine.api=1.1.4
+com.liferay.data.engine.api=2.0.0
 com.liferay.data.engine.lang=1.0.15
-com.liferay.data.engine.rest.api=8.0.2
+com.liferay.data.engine.rest.api=8.1.1
 com.liferay.data.engine.rest.client=1.0.7
 com.liferay.data.engine.rest.impl=1.0.36
 com.liferay.data.engine.rest.test=1.0.0
 com.liferay.data.engine.service=1.0.3
-com.liferay.data.engine.spi=3.0.4
+com.liferay.data.engine.spi=3.1.1
 com.liferay.data.engine.taglib=1.0.14
 com.liferay.data.engine.web=1.0.6
 com.liferay.deprecated.modules.upgrade=2.0.7
