--- a/modules/apps/knowledge-base/knowledge-base-web-test/build.gradle
+++ b/modules/apps/knowledge-base/knowledge-base-web-test/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
+	testIntegrationCompile group: "com.liferay", name: "com.liferay.arquillian.extension.junit.bridge", version: "1.0.17"
 	testIntegrationCompile project(":apps:export-import:export-import-test-util")
 	testIntegrationCompile project(":apps:knowledge-base:knowledge-base-api")
-	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
