LRQA-51048 Add search tests to stable suite

--- a/test.properties
+++ b/test.properties
@@ -2092,6 +2092,8 @@
 
     test.batch.class.names.includes[stable]=\
         **/portal-dao-test/**/*Test.java,\
+        **/portal-search/**/*Test.java,\
+        **/portal-search-elasticsearch6/**/*Test.java,\
         **/portal-upgrade-impl/**/*Test.java,\
         **/portal-upgrade-test/**/*Test.java,\
         **/portlet-title-localization-test/**/*Test.java,\
@@ -2104,6 +2106,7 @@
         functional-smoke-tomcat90-mysql57-jdk8,\
         functional-upgrade-tomcat90-mysql57-jdk8,\
         modules-integration-mysql57-jdk8,\
+        modules-unit-jdk8,\
         unit-jdk8
 
     #
