--- a/modules/apps/calendar/calendar-test-util/build.gradle
+++ b/modules/apps/calendar/calendar-test-util/build.gradle
@@ -1,13 +1,13 @@
 dependencies {
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.test", version: "default"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.test.integration", version: "default"
+	compileOnly group: "com.liferay", name: "com.liferay.calendar.api", version: "4.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "3.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.upgrade.api", version: "3.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.registry.api", version: "3.0.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.3.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.test", version: "6.0.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.test.integration", version: "6.0.0"
 	compileOnly group: "log4j", name: "log4j", version: "1.2.17"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
-	compileOnly project(":apps:calendar:calendar-api")
-	compileOnly project(":apps:portal:portal-upgrade-api")
-	compileOnly project(":core:petra:petra-string")
-	compileOnly project(":core:registry-api")
 }
 
 liferay {
