--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -156,7 +156,9 @@ com.liferay.bulk.selection.test=1.0.0
 com.liferay.calendar.api=4.0.7
 com.liferay.calendar.service=4.0.20
 com.liferay.calendar.test=1.0.0
+com.liferay.calendar.test.util=1.0.2
 com.liferay.calendar.web=3.0.24
+com.liferay.calendar.web.test=1.0.0
 com.liferay.calevent.importer=3.0.5
 com.liferay.captcha.api=3.0.11
 com.liferay.captcha.impl=2.0.6
@@ -474,9 +476,10 @@ com.liferay.knowledge.base.markdown.converter.impl=2.0.2
 com.liferay.knowledge.base.service=3.0.19
 com.liferay.knowledge.base.test=1.0.0
 com.liferay.knowledge.base.web=3.0.19
+com.liferay.knowledge.base.web.test=1.0.0
 com.liferay.layout.admin.api=2.0.2
-com.liferay.layout.admin.test=1.0.0
 com.liferay.layout.admin.web=3.0.35
+com.liferay.layout.admin.web.test=1.0.0
 com.liferay.layout.api=2.1.1
 com.liferay.layout.content.page.editor.api=1.0.2
 com.liferay.layout.content.page.editor.web=1.0.41
