--- a/modules/apps/account/account-admin-web/build.gradle
+++ b/modules/apps/account/account-admin-web/build.gradle
@@ -5,4 +5,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly project(":apps:account:account-api")
 	compileOnly project(":apps:application-list:application-list-api")
+	compileOnly project(":core:petra:petra-string")
 }
