--- a/portal-impl/src/system.properties
+++ b/portal-impl/src/system.properties
@@ -215,15 +215,15 @@
     com.sun.media.jai.disableMediaLib=true
 
 ##
-## Jaxb
+## Java Architecture for XML Binding
 ##
 
     #
-    # Configure the jaxb context factory explicitly to avoid using the one
-    # detected by context, this will force all the version of java to use same
-    # implementation instead of different implementation for different version
-    # of java. Set this property to a blank value to use the one detected
-    # automatically.
+    # Configure the JAXB context factory explicitly to avoid using the one
+    # detected by context. This will force all the version of Java to use the
+    # same implementation instead of different implementations for different
+    # versions of Java. Set this property to a blank value to use the one
+    # detected automatically.
     #
 
     javax.xml.bind.JAXBContextFactory=com.sun.xml.bind.v2.ContextFactory
