--- a/modules/package.json
+++ b/modules/package.json
@@ -55,6 +55,7 @@
 			"apps/frontend-taglib/frontend-taglib-clay",
 			"apps/frontend-theme/frontend-theme-admin",
 			"apps/frontend-theme/frontend-theme-classic",
+			"apps/frontend-theme/frontend-theme-unstyled",
 			"apps/frontend-theme-fjord/frontend-theme-fjord",
 			"apps/frontend-theme-porygon/frontend-theme-porygon",
 			"apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank",
