LPS-99221 Add clay-css to frontend-taglib-clay dependencies
Technically we can rely on the clay-css dependency declared in
frontend-theme-unstyled, but it is helpful to have the dependency
declared here for consistency.

--- a/modules/apps/frontend-taglib/frontend-taglib-clay/package.json
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/package.json
@@ -38,6 +38,7 @@
 		"clay-checkbox": "2.17.0",
 		"clay-collapse": "2.17.0",
 		"clay-component": "2.17.0",
+		"clay-css": "2.17.0",
 		"clay-data-provider": "2.17.0",
 		"clay-dataset-display": "2.17.0",
 		"clay-dropdown": "2.17.0",
