LPS-99879 Tighten up segments-web dependencies

--- a/modules/apps/segments/segments-web/package.json
+++ b/modules/apps/segments/segments-web/package.json
@@ -6,17 +6,17 @@
 		"@clayui/link": "3.0.0-milestone.2",
 		"@clayui/loading-indicator": "3.0.0-milestone.2",
 		"@clayui/select": "3.0.0-milestone.2",
-		"classnames": "^2.2.6",
+		"classnames": "2.2.6",
 		"date-fns": "^1.30.1",
-		"formik": "^1.4.1",
+		"formik": "1.4.3",
 		"frontend-js-web": "^3.0.0",
 		"metal": "2.16.8",
 		"odata-v4-parser": "^0.1.29",
-		"prop-types": "^15.6.2",
-		"react": "^16.6.3",
-		"react-dnd": "^7.7.0",
-		"react-dnd-html5-backend": "^7.7.0",
-		"react-dom": "^16.6.3"
+		"prop-types": "15.7.2",
+		"react": "16.8.6",
+		"react-dnd": "7.7.0",
+		"react-dnd-html5-backend": "7.7.0",
+		"react-dom": "16.8.6"
 	},
 	"description": "",
 	"jest": {
