Add wincent to CI

--- a/ci.properties
+++ b/ci.properties
@@ -69,6 +69,7 @@ allowed.sender.names[brianchandotcom]=\
     vicnate5,\
     victorg1991,\
     wesleygong,\
+    wincent,\
     xbrianlee,\
     yichenroy,\
     zoltantakacs
