--- a/ci.properties
+++ b/ci.properties
@@ -70,6 +70,7 @@ allowed.sender.names[brianchandotcom]=\
     vicnate5,\
     victorg1991,\
     wesleygong,\
+    wincent,\
     xbrianlee,\
     yichenroy,\
     zoltantakacs
