--- a/modules/apps/frontend-js/frontend-js-react-web/package.json
+++ b/modules/apps/frontend-js/frontend-js-react-web/package.json
@@ -8,15 +8,15 @@
 		"react-dnd-html5-backend": "7.7.0",
 		"react-dom": "16.8.6"
 	},
+	"devDependencies": {
+		"react-dnd-test-backend": "7.7.0",
+		"react-dnd-test-utils": "7.7.0"
+	},
 	"name": "frontend-js-react-web",
 	"scripts": {
 		"build": "liferay-npm-scripts build",
 		"checkFormat": "liferay-npm-scripts check",
 		"format": "liferay-npm-scripts fix"
 	},
-	"version": "2.0.0",
-	"devDependencies": {
-		"react-dnd-test-backend": "7.7.0",
-		"react-dnd-test-utils": "7.7.0"
-	}
+	"version": "2.0.0"
 }
