--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -6,4 +6,5 @@
 ##
 
     source.check.gradle.dependency.artifacts.check.enforceVersionArtifacts=\
-        com.fasterxml.jackson.core:jackson-databind:2.9.9.1
+        com.fasterxml.jackson.core:jackson-databind:2.9.9.1,\
+        com.liferay:com.liferay.arquillian.extension.junit.bridge:1.0.18
