build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -167,7 +167,9 @@ com.liferay.bulk.selection.test=1.0.0
 com.liferay.calendar.api=5.0.0
 com.liferay.calendar.service=5.0.0
 com.liferay.calendar.test=1.0.0
+com.liferay.calendar.test.util=2.0.0
 com.liferay.calendar.web=4.0.0
+com.liferay.calendar.web.test=1.0.0
 com.liferay.calevent.importer=4.0.0
 com.liferay.captcha.api=4.0.0
 com.liferay.captcha.impl=3.0.0
@@ -206,6 +208,7 @@ com.liferay.comment.sanitizer=5.0.0
 com.liferay.comment.taglib=3.0.0
 com.liferay.comment.test=1.0.0
 com.liferay.comment.web=5.0.0
+com.liferay.comment.web.test=1.0.0
 com.liferay.company.test=1.0.0
 com.liferay.configuration.admin.api=3.0.0
 com.liferay.configuration.admin.test=1.0.0
@@ -222,7 +225,7 @@ com.liferay.counter.test=1.0.0
 com.liferay.css.builder=3.0.1
 com.liferay.currency.converter.api=3.0.0
 com.liferay.currency.converter.web=4.0.0
-com.liferay.data.engine.api=2.0.0
+com.liferay.data.engine.api=3.0.0
 com.liferay.data.engine.lang=2.0.0
 com.liferay.data.engine.rest.api=9.0.0
 com.liferay.data.engine.rest.client=2.0.0
@@ -510,10 +513,11 @@ com.liferay.knowledge.base.markdown.converter.impl=3.0.0
 com.liferay.knowledge.base.service=4.0.0
 com.liferay.knowledge.base.test=1.0.0
 com.liferay.knowledge.base.web=4.0.0
+com.liferay.knowledge.base.web.test=1.0.0
 com.liferay.lang.builder=1.0.32
 com.liferay.layout.admin.api=3.0.0
-com.liferay.layout.admin.test=1.0.0
 com.liferay.layout.admin.web=4.0.0
+com.liferay.layout.admin.web.test=1.0.0
 com.liferay.layout.api=3.0.0
 com.liferay.layout.content.page.editor.api=2.0.0
 com.liferay.layout.content.page.editor.web=2.0.0
@@ -942,7 +946,7 @@ com.liferay.portal.tools.java.parser=1.0.21
 com.liferay.portal.tools.portal.compat.bytecode.transformer=4.0.0
 com.liferay.portal.tools.rest.builder=1.0.24
 com.liferay.portal.tools.sample.sql.builder=3.0.0
-com.liferay.portal.tools.service.builder=1.0.295
+com.liferay.portal.tools.service.builder=1.0.296
 com.liferay.portal.tools.service.builder.test.api=1.0.0
 com.liferay.portal.tools.service.builder.test.service=1.0.0
 com.liferay.portal.tools.service.builder.test.test=1.0.0
@@ -1175,7 +1179,7 @@ com.liferay.social.group.statistics.web=5.0.0
 com.liferay.social.requests.web=4.0.0
 com.liferay.social.user.statistics.api=4.0.0
 com.liferay.social.user.statistics.web=6.0.0
-com.liferay.source.formatter=1.0.901
+com.liferay.source.formatter=1.0.902
 com.liferay.staging.api=5.0.0
 com.liferay.staging.bar.web=4.0.0
 com.liferay.staging.configuration.web=4.0.0
