--- a/modules/apps/forms-and-workflow/calendar/calendar-service/build.gradle
+++ b/modules/apps/forms-and-workflow/calendar/calendar-service/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.rss.util", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.xstream.configurator.api", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.117.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.java", version: "2.0.0"
 	compileOnly group: "javax.mail", name: "mail", version: "1.4"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
