--- a/modules/apps/data-engine/data-engine-taglib/package.json
+++ b/modules/apps/data-engine/data-engine-taglib/package.json
@@ -6,6 +6,7 @@
 		"@clayui/form": "3.8.0",
 		"@clayui/icon": "3.0.5",
 		"@clayui/label": "3.3.1",
+		"@clayui/layout": "3.1.0",
 		"@clayui/link": "3.2.0",
 		"@clayui/list": "3.2.5",
 		"@clayui/loading-indicator": "3.1.0",
