--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language.properties
@@ -52,6 +52,7 @@ there-are-no-users-associated-with-this-account=There are no users associated wi
 there-are-no-users-associated-with-this-role=There are no users associated with this role.
 this-account-does-not-have-a-parent-account=This account does not have a parent account.
 this-account-does-not-have-a-valid-domain=This account does not have a valid domain.
+this-email-has-invalid-domain=This email has invalid domain.
 this-user-does-not-belong-to-any-accounts=This user does not belong to any accounts.
 user-display-data=User Display Data
 valid-domains=Valid Domains
