--- a/modules/apps/depot/depot-web/package.json
+++ b/modules/apps/depot/depot-web/package.json
@@ -6,6 +6,7 @@
 		"@clayui/form": "3.8.0",
 		"@clayui/icon": "3.0.5",
 		"@clayui/label": "3.3.1",
+		"@clayui/layout": "3.1.0",
 		"@clayui/modal": "3.5.1",
 		"@clayui/table": "3.0.7",
 		"frontend-js-web": "*",
