--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menu Label
 model.resource.com.liferay.app.builder=App Builder
 native=Native
+native-fields=Native Fields
 new-app=New App
 new-custom-object=New Custom Object
 new-form-view=New Form View
