--- a/modules/apps/frontend-css/frontend-css-variables-web/build.gradle
+++ b/modules/apps/frontend-css/frontend-css-variables-web/build.gradle
@@ -10,4 +10,6 @@ dependencies {
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
 	compileOnly project(":core:osgi-service-tracker-collections")
 	compileOnly project(":core:petra:petra-string")
+
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
