LPS-107597 Show proper message when there's no valid domains

--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language.properties
@@ -50,6 +50,7 @@ tax-id-help=Enter the account's tax ID (EIN, VAT number, etc.).
 the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts.
 there-are-no-organizations-associated-with-this-account=There are no organizations associated with this account.
 there-are-no-roles=There are no roles.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts.
 there-are-no-users-associated-with-this-account=There are no users associated with this account.
 there-are-no-users-associated-with-this-role=There are no users associated with this role.
 this-account-does-not-have-a-parent-account=This account does not have a parent account.
