LPS-115250 Add search container factory for Account Groups

--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language.properties
@@ -38,6 +38,7 @@ manage-users=Manage Users
 model.resource.com.liferay.account=Account
 model.resource.com.liferay.account.model.AccountEntry=Account Entry
 more-information=More Information
+no-account-groups-were-found=No account groups were found.
 no-accounts-were-found=No accounts were found.
 no-assigned-account=No Assigned Account
 parent-account=Parent Account
