LRQA-59561 Relevant needs to run relevant unit tests

--- a/test.properties
+++ b/test.properties
@@ -3291,7 +3291,8 @@
         pmd-jdk8,\
         rest-builder-jdk8,\
         semantic-versioning-jdk8,\
-        service-builder-jdk8
+        service-builder-jdk8,\
+        unit-jdk8
 
     test.batch.run.property.global.query[functional-tomcat*-mysql*-jdk8][relevant]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
