--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -32,6 +32,7 @@ ext {
 		"com.liferay.gradle.plugins.workspace.version": "2.5.3",
 		"com.liferay.portal.tools.bundle.support.version": "3.6.0",
 		"com.liferay.portal.tools.service.builder.version": "1.0.345",
+		"com.liferay.portal.tools.rest.builder.version": "1.0.112",
 		"com.liferay.portal.tools.soy.builder.version": "3.0.4",
 		"com.liferay.portal.tools.theme.builder.version": "1.1.8"
 	]
