LPS-114109 Language keys

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -55,7 +55,7 @@ category.cms=Content Management
 category.collaboration=Collaboration
 category.community=Community
 category.content=Content
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace
 category.control_panel.configuration=Configuration
 category.control_panel.sites=Sites
 category.control_panel.system=System
@@ -66,7 +66,10 @@ category.entertainment=Entertainment
 category.finance=Finance
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce
+category.global_menu.applications.communication=Communication
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Knowledge Base
