--- a/portal-impl/src/content/Language_sr_RS_latin.properties
+++ b/portal-impl/src/content/Language_sr_RS_latin.properties
@@ -49,7 +49,7 @@ category.cms=Upravljanje Sadržajem
 category.collaboration=Saradnja
 category.community=Zajednica
 category.content=Sadržaj
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuration
 category.control_panel.sites=Sites
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Zabava
 category.finance=Finansije
 category.gadgets=Gedžeti
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Baza Znanja
