--- a/modules/apps/translation/translation-api/build.gradle
+++ b/modules/apps/translation/translation-api/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly project(":apps:info:info-api")
+	compileOnly project(":apps:journal:journal-api")
 }
