LPS-115830 | LPS-110981 Add a property to represent  which roles are able to performing actions on a task

--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-rest-impl/rest-openapi.yaml
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-rest-impl/rest-openapi.yaml
@@ -38,6 +38,11 @@ components:
                     type: array
                 name:
                     type: string
+                roleIds:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
             type: object
         AppWorkflowTransition:
             properties:
