LPS-114891 Language key

--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web Content
 model.resource.com.liferay.journal.model.JournalArticle=Web Content Article
 model.resource.com.liferay.journal.model.JournalFeed=Web Content Feed
 model.resource.com.liferay.journal.model.JournalFolder=Web Content Folder
+modified-x-ago-by-x=Modified {0} ago by {1}.
 move-web-content=Move Web Content
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
