--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web Content Management
 model.resource.com.liferay.journal.model.JournalArticle=Web Content
 model.resource.com.liferay.journal.model.JournalFeed=Veb Sadržaj Fid
 model.resource.com.liferay.journal.model.JournalFolder=Veb Sadržaj Fid
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Move Web Content
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
