LRCI-1418 Enable spira backend tests for upstream jobs

--- a/test.properties
+++ b/test.properties
@@ -2026,14 +2026,29 @@
     test.batch.spira.test.case.type=Batch
     test.batch.spira.test.case.type[*-cucumber-*]=Cucumber
     test.batch.spira.test.case.type[functional-*]=Poshi
-    #test.batch.spira.test.case.type[integration-*]=Integration
-    test.batch.spira.test.case.type[integration-mysql*]=Integration
-    #test.batch.spira.test.case.type[modules-integration-*]=Modules Integration
-    test.batch.spira.test.case.type[modules-integration-mysql*]=Modules Integration
-    test.batch.spira.test.case.type[modules-unit-*]=Modules Unit
+
+    test.batch.spira.test.case.type[integration-*][test-portal-acceptance-upstream*]=Integration
+    test.batch.spira.test.case.type[integration-*][test-portal-testsuite-upstream*][acceptance*]=Integration
+    test.batch.spira.test.case.type[integration-*][test-portal-testsuite-upstream*][upstream*]=Integration
+    test.batch.spira.test.case.type[integration-*][test-portal-upstream*]=Integration
+
+    test.batch.spira.test.case.type[modules-integration-*][test-portal-acceptance-upstream*]=Modules Integration
+    test.batch.spira.test.case.type[modules-integration-*][test-portal-testsuite-upstream*][acceptance*]=Modules Integration
+    test.batch.spira.test.case.type[modules-integration-*][test-portal-testsuite-upstream*][upstream*]=Modules Integration
+    test.batch.spira.test.case.type[modules-integration-*][test-portal-upstream*]=Modules Integration
+
+    test.batch.spira.test.case.type[modules-unit-*][test-portal-acceptance-upstream*]=Modules Unit
+    test.batch.spira.test.case.type[modules-unit-*][test-portal-testsuite-upstream*][acceptance*]=Modules Unit
+    test.batch.spira.test.case.type[modules-unit-*][test-portal-testsuite-upstream*][upstream*]=Modules Unit
+    test.batch.spira.test.case.type[modules-unit-*][test-portal-upstream*]=Modules Unit
+
     test.batch.spira.test.case.type[plugins-functional-*]=Poshi
     test.batch.spira.test.case.type[test-portal-environment-*]=Poshi
-    test.batch.spira.test.case.type[unit-*]=Unit
+
+    test.batch.spira.test.case.type[unit-*][test-portal-acceptance-upstream*]=Unit
+    test.batch.spira.test.case.type[unit-*][test-portal-testsuite-upstream*][acceptance*]=Unit
+    test.batch.spira.test.case.type[unit-*][test-portal-testsuite-upstream*][upstream*]=Unit
+    test.batch.spira.test.case.type[unit-*][test-portal-upstream*]=Unit
 
     #
     # Acceptance
